# atlantis

./: Dockerfile  README.md
atlantis/: CMakeLists.txt  package.xml
atlantis/launch/: atlantis.rviz  atlantis_base_simulator_launch.py  atlantis_def.rviz  atlantis_discrete_event_simulator_launch.py  atlantis_gazebo_simulator_launch.py  atlantis_launch.py  atlantis_map.py  rviz_visualization.py
atlantis_algoryx/: CMakeLists.txt  package.xml  rviz_config.rviz
atlantis_algoryx/src/: tf_publisher.py
atlantis_base/: CMakeLists.txt  package.xml
atlantis_base/cmake_modules/: FindGRAPHICSMAGICKCPP.cmake
atlantis_base/include/atlantis_base/: base_simulator.hpp  rviz_config_generator.h  rviz_visualization.hpp
atlantis_base/src/: base_simulator.cpp  main.cpp  rviz_config_generator.cpp  rviz_config_generator_node.cpp  rviz_visualization.cpp
atlantis_collection/: CMakeLists.txt  README.md  package.xml
atlantis_collection/atlantis_collection/: CMakeLists.txt  package.xml
atlantis_collection/env-hooks/: atlantis_collection.dsv.in
atlantis_collection/models/: mine_truck.stl
atlantis_collection/scenarios/empty/: empty.yaml  scenario1.yaml
atlantis_collection/scenarios/mine/: basement.yaml  map.stl  mine.world  mine1_waypoints.txt  mine2.yaml  mine_cadia.yaml  mine_cadia_pc1.yaml  mine_small.yaml  mine_small_reverse.yaml
atlantis_collection/scenarios/mine/mine_model/: model.config  model.sdf
atlantis_collection/scenarios/mine/paths/: path0.txt  path1.txt  path10.txt  path11.txt  path12.txt  path13.txt  path14.txt  path15.txt  path16.txt  path17.txt  path18.txt  path19.txt  path2.txt  path20.txt  path21.txt  path22.txt  path23.txt  path24.txt  path25.txt  path26.txt  path3.txt  path4.txt  path5.txt  path6.txt  path7.txt  path8.txt  path9.txt
atlantis_discrete_event/: CMakeLists.txt  package.xml
atlantis_discrete_event/include/atlantis_discrete_event/: discrete_event_simulator.hpp
atlantis_discrete_event/src/: discrete_event_simulator.cpp  main.cpp
atlantis_gazebo/: CMakeLists.txt  package.xml
atlantis_gazebo/launch/: a25_sim.py  wheel_loader_sim.py
atlantis_rviz_plugins/: CMakeLists.txt  package.xml
atlantis_simple_commander/: package.xml  setup.cfg  setup.py
atlantis_simple_commander/atlantis_simple_commander/: simple_robot_commander.py  simple_scheduler.py
atlantis_simple_commander/launch/: simple_commander_launch.py
atlantis_state/: CMakeLists.txt  package.xml  pddl_state_generator_plugin.xml
atlantis_state/include/atlantis_state/: state_generator.hpp  state_generator_node.hpp
atlantis_state/include/atlantis_state/state_generators/: pddl_state_generator.hpp
atlantis_state/launch/: atlantis_state_generator_launch.py
atlantis_state/src/: main.cpp  state_generator_node.cpp
atlantis_state/src/state_generators/: pddl_state_generator.cpp
atlantis_util/: CMakeLists.txt  package.xml
atlantis_util/include/atlantis_util/: file_handler.h  utils.h
atlantis_util/src/: file_handler.cpp
