<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlantis</name>
  <version>0.0.0</version>
  <description>The atlantis multi-layers simulator</description>
  <maintainer email="paolo.forte@oru.se">Paolo Forte</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>atlantis_base</exec_depend>
  <exec_depend>atlantis_simple_commander</exec_depend>
  <exec_depend>atlantis_discrete_event</exec_depend>
  <exec_depend>atlantis_state</exec_depend>
  <exec_depend>atlantis_util</exec_depend>
  <exec_depend>ros2launch</exec_depend>	
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
