<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlantis_base</name>
  <version>0.0.1</version>
  <description>The base simulator package</description>
  <maintainer email="paolo.forte@oru.se">pofe</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>navigo</depend>
  <depend>geometry_msgs</depend> 
  <depend>sensor_msgs</depend> 
  <depend>eigen_conversions</depend>
  <depend>athena_exe_msgs</depend>
  <depend>atlantis_util</depend>
  <depend>material_handler_msgs</depend>
  <depend>location_msgs</depend>
  <depend>standard_msgs</depend>
  
  <exec_depend>ros2launch</exec_depend>	
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
